--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.49.1",
-    "@types/node": "^22.10.7"
+    "@types/node": "^22.10.7",
+    "@zerostep/playwright": "^0.1.5",
+    "auto-playwright": "^1.16.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
