--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-ZEROSTEP_TOKEN=0step:ca072702-83c3-4290-93b3-e17cfc3c24e3
+LOGIN_URL=https://app.cymulate.com/cym/login
+REPORTS_URL=https://app.cymulate.com/cym/global_report
+EMAIL=candidate_user@cymulate1.com
+PASSWORD="ZzAa!@#$4321"
+
