--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,4 +28,14 @@ jobs:
         run: npx playwright install chromium
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --reporter=line,allure-playwright
+
+      - name: Generate Allure Report
+        run: |
+          npx allure generate allure-results --clean -o allure-report
+
+      - name: Deploy Allure Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
