1.Add allure deployment token stored in github repository actions secrets

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ALLURE_RESULTS_TO_GITHUB_PAGES }}
           publish_dir: ./allure-report
