--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.50.0",
     "@types/node": "^22.10.7",
-    "@zerostep/playwright": "^0.1.5",
-    "auto-playwright": "^1.16.0"
+    "@zerostep/playwright": "^0.1.5"
   },
   "dependencies": {
     "allure-playwright": "^3.1.0",
