--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.50.0",
+    "@playwright/test": "^1.50.1",
     "@types/node": "^22.10.7",
-    "@zerostep/playwright": "^0.1.5"
+    "@zerostep/playwright": "^0.1.5",
+    "allure-playwright": "^3.1.0"
   },
   "dependencies": {
-    "allure-playwright": "^3.1.0",
     "dotenv": "^16.4.7"
   }
 }
