--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Generate Allure Report
         run: |
-          npx allure generate allure-results --clean -o allure-report
+          npx allure generate allure-results -o allure-report
 
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
