--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test --reporter=line,allure-playwright
 
-      - name: Generate Allure Report
-        run: |
-          npx allure generate allure-results --clean -o allure-report
-
-      - name: Deploy Allure Report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.ALLURE_RESULTS_TO_GITHUB_PAGES }}
-          publish_dir: ./allure-report
+#      - name: Generate Allure Report
+#        run: |
+#          npx allure generate allure-results --clean -o allure-report
+#
+#      - name: Deploy Allure Report to GitHub Pages
+#        uses: peaceiris/actions-gh-pages@v3
+#        with:
+#          github_token: ${{ secrets.ALLURE_RESULTS_TO_GITHUB_PAGES }}
+#          publish_dir: ./allure-report
