--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,7 +29,7 @@ jobs:
         run: npx playwright install chromium
 
       - name: Run Playwright tests
-        run: npx playwright test --reporter=line,allure-playwright
+        run: npx playwright test --reporter=line,allure
         continue-on-error: true
 
       - name: Generate Allure Report
