--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install Playwright with Chrome only
         run: npx playwright install chromium
 
+      - name: Install Allure Commandline
+        run: npm install -g allure-commandline --save-dev
+
       - name: Run Playwright tests
         run: npx playwright test --reporter=line,allure
         continue-on-error: true
