insert GH_PAGES_ALLURE token from secrets of github actions

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Deploy Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.ALLURE_RESULTS_TO_GITHUB_PAGES }}
+          github_token: ${{ secrets.GH_PAGES_ALLURE }}
           publish_dir: ./allure-report
