--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "allure-playwright": "^3.2.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "mime-types": "^2.1.35"
   }
 }
