remove debug steps

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,11 +37,11 @@ jobs:
         run: npx playwright test --reporter=line,allure-playwright
         continue-on-error: true
 
-      - name: List Allure Results
-        run: ls -la #allure-results
-
-      - name: List Allure Results
-        run: ls -la allure-results
+#      - name: List Allure Results
+#        run: ls -la #allure-results
+#
+#      - name: List Allure Results
+#        run: ls -la allure-results
 
       - name: Generate Allure Report
         run: |
